--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,7 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
 
+# Bower Dependencies
+bower_components
 # Debug log from npm
 npm-debug.log
