--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular-filter": "^0.5.2",
     "body-parser": "~1.8.1",
     "client-sessions": "*",
     "cookie-parser": "~1.3.3",
