--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "less-middleware": "1.0.x",
     "mongoose": "^3.8.21",
     "morgan": "~1.3.0",
+    "nodemailer": "^1.3.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0",
