--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.6.0",
     "less-middleware": "1.0.x",
     "mongoose": "^3.8.21",
+    "mongoose-deep-populate": "0.0.7",
     "morgan": "~1.3.0",
     "nodemailer": "^1.3.0",
     "passport": "^0.2.1",
