--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Calendar",
-  "version": "0.0.0",
+  "version": "0.0.0-2",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -23,5 +23,9 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0",
     "serve-favicon": "~2.1.3"
+  },
+  "subdomain": "socal",
+  "engines": {
+    "node": "0.10.x"
   }
 }
