--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "angular-filter": "^0.5.2",
+    "async": "^0.9.0",
     "body-parser": "~1.8.1",
     "client-sessions": "*",
     "cookie-parser": "~1.3.3",
