--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0",
-    "serve-favicon": "~2.1.3"
+    "serve-favicon": "~2.1.3",
+    "underscore": "^1.8.2"
   },
   "subdomain": "socal",
   "engines": {
